--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <section>
+     <section class="banner1">
 <div class="half-width">
 <h1>
     WELCOME TO 
@@ -24,7 +24,7 @@
 
 
 </p>
-<a  class="button-color" href="https://www.facebook.com/sakibridoy.ridoy/">HIRE ME </a>
+<a class="button" href="https://www.facebook.com/sakibridoy.ridoy/">HIRE ME </a>
 </div>
 
 <div  class="half-width">
