--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     WELCOME TO 
 </h1>
 <h1>
-<span class="name-color">SAKIB</span>  WEBSITE
+<span class="orenge-color">SAKIB</span>  WEBSITE
 </h1>
 
 <h1>
@@ -32,5 +32,79 @@
 
 </div>
      </section>
+
+
+
+
+
+
+<section class="dream-area">
+
+
+
+<div class="half-width">
+
+<img src="image/pic1.png" alt="">
+
+</div>
+
+
+<div class="half-width">
+<h2>DREAM</h2>
+<P>I dreamt I was in a digital metropolis, where every skyscraper was built from lines of code and glowing with vibrant, animated designs. I navigated through streets lined with sleek interfaces, where buttons and links pulsed like heartbeats. As I moved, I could see the underlying HTML, CSS, and JavaScript weaving together, forming a seamless tapestry of interactive experiences. Each click and scroll transformed the environment, creating a dynamic and ever-evolving web of possibilities. In this dream, I was both the architect and the explorer, shaping and discovering a boundless virtual world where innovation and creativity had no limits.</P>
+
+<a class="button" href="https://www.facebook.com/sakibridoy.ridoy/">HIRE ME </a>
+
+</div>
+
+
+
+</section>
+
+<section class="experience">
+<h2>
+    EXPERIENCE 
+</h2>
+<div id="side-border" class="half-width shadow">
+
+
+
+
+<h2>
+    
+    Full Stack Web Developer
+</h2>
+<h3 class="orenge-color">
+    2025 Prolevel Wev Developer 
+</h3>
+<p>
+    As a master of HTML, CSS, and JavaScript, I possess comprehensive knowledge and expertise in creating fully functional and visually appealing websites. My skills enable me to build responsive, interactive, and user-friendly web applications from scratch. I can effectively structure web content using HTML, style it beautifully with CSS, and bring it to life with dynamic behaviors and features through JavaScript. My proficiency ensures that I can handle every aspect of web development, from designing seamless user interfaces to implementing complex functionalities, resulting in high-quality, complete websites. 
+
+</p>
+</div>
+
+
+
+<div id="sidetwo" class="half-width shadow">
+<h2>Baby Web Developer </h2>
+<h3 class="orenge-color">
+    2023-2024 Programing Hero  Learner
+</h3>
+<p>
+    As a master of HTML, CSS, and JavaScript, I possessed comprehensive knowledge and expertise in creating fully functional and visually appealing websites. My skills enabled me to build responsive, interactive, and user-friendly web applications from scratch. I could effectively structure web content using HTML, style it beautifully with CSS, and bring it to life with dynamic behaviors and features through JavaScript. My proficiency ensured that I could handle every aspect of web development, from designing seamless user interfaces to implementing complex functionalities, resulting in high-quality, complete websites.
+</p>
+</div>
+
+</section>
+
+<footer>
+
+<p>
+    @copyright 2025 .All data are reserve   
+</p>
+
+
+</footer>
+
 </body>
 </html>
