--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <div class="half-width">
 <h2>DREAM</h2>
-<P>I dreamt I was in a digital metropolis, where every skyscraper was built from lines of code and glowing with vibrant, animated designs. I navigated through streets lined with sleek interfaces, where buttons and links pulsed like heartbeats. As I moved, I could see the underlying HTML, CSS, and JavaScript weaving together, forming a seamless tapestry of interactive experiences. Each click and scroll transformed the environment, creating a dynamic and ever-evolving web of possibilities. In this dream, I was both the architect and the explorer, shaping and discovering a boundless virtual world where innovation and creativity had no limits.</P>
+<P>As a web developer, I specialize in crafting seamless and responsive websites that blend aesthetics with functionality. My expertise spans front-end technologies like HTML, CSS, and JavaScript, along with back-end proficiency in languages such as Python and PHP. I thrive on creating user-friendly interfaces and optimizing web performance to ensure a smooth user experience. Constantly staying updated with the latest trends and technologies, I am passionate about turning innovative ideas into digital realities, ensuring every project I work on is both visually appealing and technically robust.</P>
 
 <a class="button" href="https://www.facebook.com/sakibridoy.ridoy/">HIRE ME </a>
 
